objects/thunderhead__ONE_Setup__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>thunderhead__api_key__c</fullName>
        <description>The API key for your tenant (from the ONE tenant admin security page)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The API key for your tenant (from the ONE tenant admin security page)</inlineHelpText>
        <label>API_Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thunderhead__api_secret__c</fullName>
        <description>The API secret for your tenant (from the ONE tenant admin security page)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The API secret for your tenant (from the ONE tenant admin security page)</inlineHelpText>
        <label>API Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thunderhead__api_username__c</fullName>
        <description>The username used to make requests to one</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Thunderhead recommends creating a dedicated user for API requests. For example, create the user &apos;apiuser@tenant&apos;, with the email address of the user who will control the dedicated account.</inlineHelpText>
        <label>API Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thunderhead__server__c</fullName>
        <defaultValue>&quot;https://eu2.thunderhead.com&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Server</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thunderhead__site_key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Site Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thunderhead__touchpoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Touchpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ONE_Setup</label>
</CustomObject>